--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ build/
 DerivedData/
 .DS_Store
 
+
 ## Various settings
 *.pbxuser
 !default.pbxuser
@@ -44,7 +45,7 @@ playground.xcworkspace
 # you should judge for yourself, the pros and cons are mentioned at:
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 #
-# Pods/
+Pods/
 
 # Carthage
 #
